--- a/AddressBook/src/main/res/values/strings.xml
+++ b/AddressBook/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">AddressBook</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="add_new_contact">Add new contact</string>
 
 </resources>
