--- a/AddressBook/src/main/res/values/strings.xml
+++ b/AddressBook/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="add_new_contact">Add new contact</string>
+    <string name="full_name">Full name</string>
+    <string name="phone_number">Phone number</string>
+    <string name="email_address">Email address</string>
 
 </resources>
