--- a/AddressBook/src/main/res/values/strings.xml
+++ b/AddressBook/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
 
     <string name="app_name">AddressBook</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="add_new_contact">Add new contact</string>
     <string name="full_name">Full name</string>
     <string name="phone_number">Phone number</string>
     <string name="email_address">Email address</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
 
 </resources>
